feat: updated every title as name  | Unit Converter

--- a/length.html
+++ b/length.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Length</title>
+    <title>Length | Unit Converter</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -39,7 +39,6 @@
             <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
-
 
     <div class="container">
         <h1>Length Converter</h1>
@@ -100,7 +99,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="nav.js"></script>
     <script>
