--- a/data.html
+++ b/data.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data</title>
+    <title>Data | Unit Converter</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
