--- a/text.html
+++ b/text.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text styling</title>
+    <title>Text styling | Unit Converter</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
     <style>
@@ -187,7 +187,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="./nav.js"></script>
     <script>
