feat: added meta tags + google dashboard verification

--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Unit Converter</title>
+    <meta name="description"
+        content="Simple real time unit converter app to provide day to day problems a simple solution online." />
+    <meta name="keywords"
+        content="arun, arun neupane, arun dada , arundada9000, arunneupane20, about arun , who is arun neupane" />
+
     <link rel="stylesheet" href="./styles.css">
     <style>
         body {
@@ -35,7 +40,7 @@
             color: #0044cc;
         }
 
-       .container p {
+        .container p {
             font-size: 1.1rem;
             line-height: 1.6;
             margin-bottom: 1.5rem;
