--- a/data.html
+++ b/data.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data | Unit Converter</title>
+    <title>Data Converter - Convert Bytes, Kilobytes, Megabytes & More</title>
+    <meta name="description"
+        content="Easily convert data units such as bytes, kilobytes, megabytes, gigabytes, and more. Fast and accurate data unit conversion." />
+    <meta name="keywords"
+        content="data converter, bytes to kilobytes, data unit conversion, megabytes converter, data calculator,real time data converter" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -63,7 +68,7 @@
             <option value="pb">Petabyte (pb)</option>
         </select>
     </div>
-    
+
     <footer>
         <div class="footer-container">
             <div class="footer-info">
