--- a/discount.html
+++ b/discount.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discount calculator  | Unit Converter</title>
+    <title>Discount Calculator - Calculate total discount and Cost price</title>
+    <meta name="description"
+        content="Easily calculate your discount amount and price after discount in real time right at your fingertips online." />
+    <meta name="keywords"
+        content="discount calculator, real time discount calculator, price after discount, cost price calculator,real time" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
