--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Unit Converter</title>
+    <title>Unit Converter App - Convert Length, Mass, Time & More</title>
+    <meta name="description"
+        content="Convert length, mass, time, and other units easily with our online unit converter app. Fast, accurate, and simple to use." />
+    <meta name="keywords"
+        content="unit converter, online conversion tool, convert length, mass converter, time converter, easy conversion,real time converter" />
+
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
