--- a/length.html
+++ b/length.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Length | Unit Converter</title>
+    <title>Length Converter - Convert Meters, Kilometers, Miles & More</title>
+    <meta name="description"
+        content="Convert length units like meters, kilometers, miles, and more with our simple and fast online converter." />
+    <meta name="keywords"
+        content="length converter, meters to kilometers, convert miles, length unit conversion, distance calculator,real time length converter" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
