--- a/mass.html
+++ b/mass.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mass | Unit Converter</title>
+    <title>Mass Converter - Convert Kilograms, Pounds, Grams & More</title>
+    <meta name="description"
+        content="Convert mass units like kilograms, pounds, grams, and more with our easy-to-use mass conversion tool." />
+    <meta name="keywords"
+        content="mass converter, kilograms to pounds, convert grams, weight converter, mass unit conversion,real time mass converter" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
