--- a/numbersystem.html
+++ b/numbersystem.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number System | Unit Converter</title>
+    <title>Number System Converter - Convert binary, decimal, octal & hexadecimal</title>
+    <meta name="description"
+        content="Easily convert number system such as binary, decimal, octal, hexadecimal, and more. Fast and accurate number system conversion." />
+    <meta name="keywords"
+        content="number system converter, binary to decimal, decimal to octal, hexadecimal converter, octal to hexadecimal converter online, real time converter" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
