--- a/power.html
+++ b/power.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Power Mod Calculator | Unit Converter</title>
+    <title>Power Mod Calculator - Fast and Accurate Modulo Calculator</title>
+    <meta name="description"
+        content="Use our power mod calculator to calculate powers and modulos. Fast, accurate, and easy to use." />
+    <meta name="keywords"
+        content="power mod calculator, modulo calculator, exponent mod, fast mod calculation, power calculator, online mod calculator, online power mod calculator,real time calculator" />
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
     <style>
