--- a/temperature.html
+++ b/temperature.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temperature | Unit Converter</title>
+    <title>Temperature Converter - Convert Celsius, Fahrenheit, Kelvin & More</title>
+    <meta name="description"
+        content="Convert temperature units like Celsius, Fahrenheit, and Kelvin easily and accurately." />
+    <meta name="keywords"
+        content="temperature converter, Celsius to Fahrenheit, convert Kelvin, temperature unit conversion, online converter, kelvin to celsius,real time converter" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
