--- a/text.html
+++ b/text.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text styling | Unit Converter</title>
+    <title>Text Styler - Style your text as you want</title>
+    <meta name="description"
+        content="Easily style your text such as case change , copy paste and more options in real time." />
+    <meta name="keywords" content="text styler, real time text styling , online , copy and paste" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
     <style>
