--- a/time.html
+++ b/time.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time | Unit Converter</title>
+    <title>Time Converter - Convert Hours, Minutes, Seconds & More</title>
+    <meta name="description"
+        content="Quickly convert time units such as hours, minutes, seconds, and more. Fast and accurate time conversion." />
+    <meta name="keywords"
+        content="time converter, hours to minutes, convert seconds, time unit conversion, time calculator,real time converter" />
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
