--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Unit Converter</title>
+    <meta name="description"
+        content="Get in touch with us for support or inquiries about our unit converter app. We're here to help." />
+    <meta name="keywords" content="contact us, support, inquiry, unit converter help, reach out" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./footer.css">
 
