Update : updated links since i  changed back to my original arundada9000 username

--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
 
         <div class="social-media">
             <h2>Follow Me</h2>
-            <a href="https://www.instagram.com/arunneupane20" target="_blank"><img
+            <a href="https://www.instagram.com/arundada9000" target="_blank"><img
                     src="https://th.bing.com/th/id/OIP.eLIOZiuzO49YP3M_B8528QHaHT?rs=1&pid=ImgDetMain"
                     alt="Instagram"></a>
             <a href="https://www.youtube.com/@code_with_ease" target="_blank"><img
@@ -156,7 +156,7 @@
                     alt="YouTube"></a>
             <a href="https://github.com/arundada9000" target="_blank"><img
                     src="https://cdn.afterdawn.fi/v3/news/original/github-logo.png" alt="GitHub"></a>
-            <a href="https://www.facebook.com/arunneupane20/" target="_blank"><img
+            <a href="https://www.facebook.com/arunneupane9000/" target="_blank"><img
                     src="https://static.vecteezy.com/system/resources/previews/018/930/476/original/facebook-logo-facebook-icon-transparent-free-png.png"
                     alt="Facebook"></a>
         </div>
